--- a/paraDYM/app/src/main/AndroidManifest.xml
+++ b/paraDYM/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
             </intent-filter>
 
         </activity>
+
+        <activity
+            android:name=".Main2Activity"
+            >
+        </activity>
     </application>
 
 </manifest>
